fixes too long headline in smallest media query

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -204,7 +204,7 @@ footer {
 
   .headline {
     background-color: black;
-    width: 100%;
+    width: auto;
     position: relative;
     top: 10rem;
     padding: 1rem 2rem;
